first commit: assignment 1

--- a/_posts/2025-06-28-math-18.00A-assignment1.md
+++ b/_posts/2025-06-28-math-18.00A-assignment1.md
@@ -2,7 +2,7 @@
 layout: single
 title: "MIT OCW: Real Analysis 18.100A Assignment 1"
 date: 2025-06-27
-mathjax: true
+use_math: true
 categories: real-analysis assignments
 ---
 
