first commit: assignment 1

--- a/_posts/2025-06-28-math-18.00A-assignment1.md
+++ b/_posts/2025-06-28-math-18.00A-assignment1.md
@@ -188,5 +188,29 @@ Build \\( q \\) as:
 - Numerator = product of all \\( p_i^{r_q / 2} \\)
 - Denominator = product of all \\( q_j^{(s_q + 1)/2} \\)
 
-Then apply \\( f \\), and you recover \\( n \\). Therefore, \\( f \\) is surjective.
+Then apply \\( f \\), and you recover \\( n \\). That is,
+
+\\[
+f(q) = \prod_{i} p_i^{2r_i} \cdot \prod_{j} q_j^{2s_j - 1}
+\\]
+
+Given \\( n \\), factor it into primes:
+
+- Every prime with **even exponent** contributes to the **numerator**:  
+  \\[
+  p_i^{2r_i} \Rightarrow p_i^{r_i} \text{ in the numerator}
+  \\]
+
+- Every prime with **odd exponent** contributes to the **denominator**:  
+  \\[
+  q_j^{2s_j - 1} \Rightarrow q_j^{s_j} \text{ in the denominator}
+  \\]
+
+Thus, the rational number is:
+
+\\[
+q = \frac{\prod p_i^{r_i}}{\prod q_j^{s_j}}
+\\]
+
+Therefore, \\( f \\) is **surjective**: every natural number \\( n \\) corresponds to a unique positive rational \\( q \\).
 
