first commit: assignment 1

--- a/_posts/2025-06-28-math-18.00A-assignment1.md
+++ b/_posts/2025-06-28-math-18.00A-assignment1.md
@@ -4,6 +4,16 @@ title: "MIT OCW: Real Analysis 18.100A Assignment 1"
 date: 2025-06-27
 mathjax: true
 categories: real-analysis assignments
+header:
+  image: /_assets/images/function-mapping.svg
+  #caption: "Function mappings"
+  overlay_color: "#000"
+  overlay_filter: "0.3"
+  #overlay_image: /assets/images/real-analysis-cover.jpg
+  #actions:
+  #  - label: "View Course"
+  #    url: "https://ocw.mit.edu/courses/18-100a-real-analysis-fall-2020/"
+excerpt: ""
 ---
 
 ## Exercise 0.3.6: Prove
