--- a/_posts/2025-06-28-math-18.00A-assignment1.md
+++ b/_posts/2025-06-28-math-18.00A-assignment1.md
@@ -9,11 +9,13 @@ header:
   #caption: "Function mappings"
   overlay_color: "#000"
   overlay_filter: "0.3"
-  #overlay_image: /assets/images/real-analysis-cover.jpg
+  overlay_image: /_assets/images/function-mapping.svg
   #actions:
   #  - label: "View Course"
   #    url: "https://ocw.mit.edu/courses/18-100a-real-analysis-fall-2020/"
-excerpt: ""
+excerpt: >
+  This blog goes through the assignments for the <a href="https://ocw.mit.edu/courses/18-100a-real-analysis-fall-2020/" target="_blank">MIT OpenCourseWare Real Analysis course</a>.<br>
+  <img src="/_assets/images/function-mapping.svg" alt="Function Mapping Diagram" style="max-width:100%; margin-top:1em;">
 ---
 
 ## Exercise 0.3.6: Prove
