--- a/_posts/2025-06-28-math-18.00A-assignment1.md
+++ b/_posts/2025-06-28-math-18.00A-assignment1.md
@@ -9,7 +9,7 @@ header:
   #caption: "Function mappings"
   overlay_color: "#000"
   overlay_filter: "0.3"
-  overlay_image: /assets/images/function-mapping.svg
+  #overlay_image: /assets/images/function-mapping.svg
   #actions:
   #  - label: "View Course"
   #    url: "https://ocw.mit.edu/courses/18-100a-real-analysis-fall-2020/"
