--- a/_posts/2025-06-28-math-18.00A-assignment1.md
+++ b/_posts/2025-06-28-math-18.00A-assignment1.md
@@ -13,9 +13,7 @@ header:
   #actions:
   #  - label: "View Course"
   #    url: "https://ocw.mit.edu/courses/18-100a-real-analysis-fall-2020/"
-excerpt: >
-  This blog goes through the assignments for the <a href="https://ocw.mit.edu/courses/18-100a-real-analysis-fall-2020/" target="_blank">MIT OpenCourseWare Real Analysis course</a>.<br>
-  <img src="/assets/images/function-mapping.svg" alt="Function Mapping Diagram" style="max-width:100%; margin-top:1em;">
+excerpt: ""
 ---
 
 ## Exercise 0.3.6: Prove
